@@ -33,7 +33,7 @@ soundkonverter_replaygain_mp3gain::soundkonverter_replaygain_mp3gain( QObject *p
 
     group = conf->group( "Plugin-"+name() );
     tagMode = group.readEntry( "tagMode", 0 );
-    modifyAudioStream = group.readEntry( "modifyAudioStream", true );
+    modifyAudioStream = group.readEntry( "modifyAudioStream", false );
     gainAdjustment = group.readEntry( "gainAdjustment", 0.0 );
 }
 
@@ -141,7 +141,7 @@ void soundkonverter_replaygain_mp3gain::configDialogDefault()
     if( configDialog.data() )
     {
         configDialogTagModeComboBox->setCurrentIndex( 0 );
-        configDialogModifyAudioStreamCheckBox->setChecked( true );
+        configDialogModifyAudioStreamCheckBox->setChecked( false );
         configDialogGainAdjustmentSpinBox->setValue( 0.0 );
     }
 }
